--- a/about.html
+++ b/about.html
@@ -292,15 +292,22 @@
 
       <p>
         I work with moving image preservation, analogue film practices,
-        and archival processes, focusing on the transmission of
-        photochemical knowledge and its contemporary relevance.
+        and archival processes, focusing on the transmission of photochemical 
+        knowledge and its contemporary relevance.My practice intersects archival
+        research, expanded cinema,and contemporary digital environments.
       </p>
 
       <p>
-        My practice intersects archival research, expanded cinema,
-        and contemporary digital environments, with a strong focus
-        on materiality, process, and time.
+      Film preservation specialist with a Master’s degree from Elías Querejeta Zine Eskola (2023),
+      supported by the AMIA George Blood LP Women in Audiovisual Archiving and Technology Scholarship.
+      And a bachelor in Film Studies at ESTC (2021).
       </p>
+      <p>
+      Have Experience in analog, digital film restoration, and archival research for the Portuguese
+      Cinematheque,through the restoration company Cineric P. in the department of film prep. and digitization.
+      Participated in various multidisciplinary audiovisual projects as an editing assistant to the artist 
+      and director Salomé Lamas. And received a short-term research grant from the Portuguese Cinematheque
+      to study the work of the Portuguese avant-garde artist Ernesto de Sousa’s.</p>
 
       <!-- aqui podes continuar a acrescentar texto, listas, etc -->
     </div>
