--- a/about.html
+++ b/about.html
@@ -340,11 +340,22 @@
             Vimeo
           </a>
         </div>
-
+        <section id="cv" class="section">
+        <div class="section-header">
+          <h2 class="section-title">CV</h2>="cv" class="section">
+        <div class="section-header">
+          <h2 class="section-title">CV</h2>
       </div>
+      <div class="card">
+            <h3 class="card-title">Download</h3>
+            <p class="card-body">
     </div>
   </div>
  </section>
  </main>
- </body>
+ <script>
+    // Ano automático no footer
+    document.getElementById("year").textContent = new Date().getFullYear();
+  </script>
+</body>
 </html>
