--- a/about.html
+++ b/about.html
@@ -245,6 +245,28 @@
 .contact-item a:hover{
   border-bottom-color:var(--muted2);
 }
+/* Botão CV alinhado com os contactos na vertical */
+.cv-button {
+  display: inline-block;
+  margin-top: 20px; /* distância em relação aos contactos */
+  padding: 10px 22px;
+  font-family: "Bebas Kai", system-ui, sans-serif;
+  font-size: 1rem;
+  color: var(--muted);
+  background-color: rgba(242,244,247,0.05); /* fundo suave */
+  border: 1px solid rgba(242,244,247,0.15);
+  border-radius: 6px;
+  text-decoration: none;
+  text-align: center;
+  transition: all 0.3s ease;
+}
+
+.cv-button:hover {
+  background-color: rgba(242,244,247,0.15);
+  border-color: var(--muted);
+  transform: translateY(-2px);
+}
+
 
 /* =======================
    RESPONSIVE
@@ -338,19 +360,16 @@
           <span class="icon">↗</span>
           <a href="https://vimeo.com/teuvimeo" target="_blank">
             Vimeo
-          </a>
-        </div>
-        <section id="cv" class="section">
-        <div class="section-header">
-          <h2 class="section-title">CV</h2>="cv" class="section">
-        <div class="section-header">
-          <h2 class="section-title">CV</h2>
-      </div>
-      <div class="card">
-            <h3 class="card-title">Download</h3>
-            <p class="card-body">
+           </a>
     </div>
   </div>
+
+    <!-- BOTÃO DE DOWNLOAD CV -->
+   <a href="https://drive.google.com/your-cv-link" target="_blank" class="cv-button">
+    CV
+   </a>
+
+   </div>
  </section>
  </main>
  <script>
