--- a/about.html
+++ b/about.html
@@ -247,7 +247,7 @@
 }
 /* Botão CV alinhado com os contactos na vertical */
 .cv-button {
-  display: inline-block;
+  display: center;
   margin-top: 20px; /* distância em relação aos contactos */
   padding: 10px 22px;
   font-family: "Bebas Kai", system-ui, sans-serif;
@@ -257,7 +257,7 @@
   border: 1px solid rgba(242,244,247,0.15);
   border-radius: 6px;
   text-decoration: none;
-  text-align: center;
+  text-align: flex-end;
   transition: all 0.3s ease;
 }
 
