--- a/about.html
+++ b/about.html
@@ -373,8 +373,14 @@
    <a href="https://drive.google.com/your-cv-link" target="_blank" class="cv-button">
     cv
    </a>
+   <div class=" GRANTS and FUNDS"> 
 
+    <p> KSFVEOV </p>
+    
    </div>
+   
+   </div>
+   
  </section>
  </main>
  <script>
