--- a/about.html
+++ b/about.html
@@ -264,6 +264,8 @@
   transition: all .3s ease;
   border-radius: 4px;
   text-align: center;
+  align-self: right;  /* centraliza dentro do flex container .about-side */
+  
 }
 
 .cv-button:hover {
