--- a/about.html
+++ b/about.html
@@ -264,7 +264,7 @@
   transition: all .3s ease;
   border-radius: 4px;
   text-align: center;
-  align-self: right;  /* centraliza dentro do flex container .about-side */
+  align-self: center;  /* centraliza dentro do flex container .about-side */
   
 }
 
