--- a/about.html
+++ b/about.html
@@ -255,14 +255,14 @@
   margin-top: 28px;
   padding: 10px 24px;
   background: rgba(242,244,247,.08);
-  border: 1px solid rgba(242,244,247,.22);
+  border: 3px double #f2f4f7;
   color: var(--muted);
   text-decoration: none;
   font-family: "Bebas Kai", system-ui, sans-serif;
   letter-spacing: .12em;
   text-transform: uppercase;
   transition: all .3s ease;
-  border-radius: 4px;
+  border-radius: 1px;
   text-align: center;
   align-self: center;  /* centraliza dentro do flex container .about-side */
   
