--- a/about.html
+++ b/about.html
@@ -274,6 +274,15 @@
   color: var(--text);
 }
 
+.hero-breath { 
+  height: 1vh;
+}
+
+.GRANTS { 
+  
+  
+}
+
 
 /* =======================
    RESPONSIVE
@@ -375,6 +384,9 @@
    <a href="https://drive.google.com/your-cv-link" target="_blank" class="cv-button">
     cv
    </a>
+    <!-- HERO BREATH  UN CHIQUITIN  -->
+   <div class="hero-breath"></div>
+
    <div class=" GRANTS and FUNDS"> 
 
     <p> KSFVEOV </p>
