--- a/about.html
+++ b/about.html
@@ -279,7 +279,9 @@
 ======================= */
 
 .about-breath{
-  height: 12vh;
+   height: 5vh;
+  min-height: 48px;
+  max-height: 72px;
 }
 
 /* =======================
