--- a/artistic-works.html
+++ b/artistic-works.html
@@ -255,8 +255,8 @@
       </div>
 
       <div class="media-row">
-        <img src="color2.png" alt="Send Me a Color – image 2" />
-        <img src="color3.png" alt="Send Me a Color – image 3" />
+        <img src="pag1 (2).png" alt="Send Me a Color – image 2" />
+        <img src="pag3.png" alt="Send Me a Color – image 3" />
       </div>
     </div>
   </main>
