--- a/artistic-works.html
+++ b/artistic-works.html
@@ -239,27 +239,31 @@
     </nav>
   </header>
 
-  <!-- ---------------- CONTENT ---------------- -->
-  <main class="page-wrapper">
-    <h1>SEND ME A COLOR</h1>
-
-    <div class="media-block">
-      <img src="pag1 (2).png" alt="Send Me a Color – image 1" />
-
-      <div class="video-fixed">
-        <iframe
-          src="https://player.vimeo.com/video/1081106970?h=70594f4e3f"
-          allow="autoplay; fullscreen; picture-in-picture"
-          allowfullscreen>
-        </iframe>
-      </div>
-
-      <div class="media-row">
-        <img src="pag3.png" alt="Send Me a Color – image 2" />
-        <img src="pag4.png" alt="Send Me a Color – image 3" />
-      </div>
+<main>
+  <section class="send-color-hero">
+    <div class="inner">
+      <h1>Send Me a Color</h1>
+      <p class="subtitle">A series of analogue experiments in colour and photochemical process.</p>
     </div>
-  </main>
+  </section>
 
+  <section class="send-color-gallery">
+    <div class="inner">
+
+      <figure class="send-color-item">
+        <img src="img/send-color-1.jpg" alt="Send Me a Color – image 1">
+      </figure>
+
+      <figure class="send-color-item">
+        <img src="img/send-color-2.jpg" alt="Send Me a Color – image 2">
+      </figure>
+
+      <figure class="send-color-item">
+        <img src="img/send-color-3.jpg" alt="Send Me a Color – image 3">
+      </figure>
+
+    </div>
+  </section>
+</main>
 </body>
 </html>
