--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
 .about-photo-col{
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-end
   flex-shrink: 0;
 }
 
