--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
 }
 
 .about-inner{
-  padding-left: 7%; /* ou o valor usado no hero para o front frame */
+  padding-left: 40px; ou o valor usado no hero para o front frame */
   margin: 0 auto;
   display: flex;
   align-items: center; /* 🔥 texto alinhado ao centro da foto */
