--- a/index.html
+++ b/index.html
@@ -385,10 +385,10 @@
 }
 
 .about-inner{
-  padding-left: 50px; ou o valor usado no hero para o front frame */
-  margin: 0 auto;
+  max-width: 1120px;   /* ou 1040px se quiseres mais compacto */
+  margin: 0 auto;      /* 🔥 isto centra o bloco */
   display: flex;
-  align-items: center; /* 🔥 texto alinhado ao centro da foto */
+  align-items: center;
   gap: 48px;
 }
 
