--- a/index.html
+++ b/index.html
@@ -382,6 +382,7 @@
 .about{
   background: #0a0c11; /* almost imperceptible grey */
   padding: 80px 22px 120px;
+  padding: 80px 22px 120px;
 }
 
 .about-inner{
@@ -390,6 +391,8 @@
   display: flex;
   align-items: center;
   gap: 48px;
+    padding-left: 80px; /* micro-ajuste em px, não em % */
+  
 }
 
 /* =======================
