--- a/about.html
+++ b/about.html
@@ -481,12 +481,25 @@
       </li>
     </ul>
 
-    <!-- fotos a apresentar -->
-    <div class="presentation-photos">
-      <img src="presenting1.jpg" alt="Presenting at conference">
-      <img src="presenting2.jpg" alt="Panel discussion">
-      <img src="presenting3.jpg" alt="Lecture moment">
-    </div>
+
+   <div class="presentation-photos">
+
+  <figure class="presentation-item">
+    <img src="presenting1.jpg" alt="Conference presentation at FIAF Symposium, Paris">
+    <figcaption>FIAF Symposium, Paris — conference presentation</figcaption>
+  </figure>
+
+  <figure class="presentation-item">
+    <img src="presenting2.jpg" alt="Panel discussion at audiovisual archiving conference">
+    <figcaption>Panel discussion on audiovisual archiving</figcaption>
+  </figure>
+
+  <figure class="presentation-item">
+    <img src="presenting3.jpg" alt="Lecture moment during academic conference">
+    <figcaption>Lecture session — research presentation</figcaption>
+  </figure>
+
+</div>
 
   </div>
 </section>
